--- a/config/database.yml
+++ b/config/database.yml
@@ -9,10 +9,12 @@ development:
   timeout: 5000
 
 test:
+  host: 172.28.200.3
+  port: 3306
   adapter: mysql2
-  database: smartspace_test
-  username: root
-  password:
+  database: bgbilling_test
+  username: bill
+  password: bgbilling
   pool: 5
   timeout: 5000
 
